layout: prevent footer and status code overlap with menu even if content is shorter than menu
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@1180 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/default.css
+++ b/mig/images/default.css
@@ -161,6 +161,8 @@ table.monitorruntimeenvreq {
   margin: 4px;
   margin-left: 168px;
   padding: 0;
+  /* Prevent footer overlap with menu */
+  min-height: 500px;
 }
 
 /* override block layout for maximized areas like wshell */
